cc_test(
    name = "test_libtins",
    size = "small",
    srcs = ["test_libtins.cpp"],
    linkopts = [
        "-L@com_github_mfontanini_libtins//:libtins/lib",
        "-l:libtins.so.4.4"
    ],
    deps = [
        "@com_google_googletest//:gtest_main",
        "@com_github_mfontanini_libtins//:libtins",
    ],
)